--- a/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
@@ -1,8 +1,7 @@
-
 <div *ngIf="OType=='area'"
     class="col d-flex justify-content-center align-items-center card transparent-background dialog-content">
     <div class="card-content">
-         <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
             <h6>NEW AREA DETAILS</h6>
             <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
         </div>
@@ -109,16 +108,14 @@
                 </mat-form-field>
             </div> -->
             <mat-form-field>
-                <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date">
+                <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date" >
                 <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
-                <mat-datepicker #dp
-                                startView="multi-year"
-                                (yearSelected)="chosenYearHandler($event)"
-                                (monthSelected)="chosenMonthHandler($event, dp)"
-                                panelClass="example-month-picker">
+                <mat-datepicker #dp startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+                    (monthSelected)="chosenMonthHandler($event, dp)" panelClass="example-month-picker">
                 </mat-datepicker>
-              </mat-form-field>
-            <div class="col-12 col-md-3 d-flex justify-content-center align-items-center mb-3 tooltip-container" style="cursor: pointer;">  
+            </mat-form-field>
+            <div class="col-12 col-md-3 d-flex justify-content-center align-items-center mb-3 tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
@@ -139,13 +136,15 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;"> 
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container ">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
@@ -167,13 +166,15 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container ">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
@@ -195,13 +196,15 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container ">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
                 <div class="icon-container">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
@@ -224,14 +227,16 @@
                 <span class="formlabel">Click You Need Report Format - >
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container ">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -251,14 +256,16 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container ">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -278,14 +285,16 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container ">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container " style="cursor: pointer;">
-                <div class="icon-container">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -305,14 +314,16 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container ">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container " style="cursor: pointer;">
-                <div class="icon-container">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -333,14 +344,16 @@
                 <span class="formlabel">Click You Need Report Format
                 </span>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container" style="cursor: pointer;">
-                <div class="icon-container ">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
-            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container " style="cursor: pointer;">
-                <div class="icon-container">
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
