--- a/src/app/admin/features/special_role/Dialogue/logindialogue/logindialogue.component.html
+++ b/src/app/admin/features/special_role/Dialogue/logindialogue/logindialogue.component.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="col-12 col-md-7">
-                    {{editRole}}
+                    <!-- {{editRole}} -->
                     <mat-form-field appearance="outline" style="width: 100%;">
                         <mat-select [(ngModel)]="editRole" name="roleid" #roleInput="ngModel" required>
                             <mat-option value="">Select a Role</mat-option>
