--- a/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
@@ -1,63 +1,87 @@
 <section>
-  <h5>PRODUCT HISTORY</h5>
-  <div class="cardContainer">
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>Smartcard Package Update History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>Combo Package Update History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Monthwise Alacarte History Report</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Addon Package History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong> Package Reference Master Report</strong> </div>
-    </div>
-  </div>
+  <mat-accordion class="example-headers-align">
+    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title class="text2">PRODUCT HISTORY</mat-panel-title>
+      </mat-expansion-panel-header>
+      <!-- <h5>PRODUCT HISTORY</h5> -->
+      <div class="cardContainer">
+        <div class="card"><i class="fas fa-layer-group"></i>
+          <div><strong>Smartcard Package Update History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-cube"></i>
+          <div><strong>Combo Package Update History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-calendar-alt"></i>
+
+          <div><strong>Monthwise Alacarte History Report</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-file-invoice"></i>
+
+          <div><strong>Addon Package History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-clipboard-list"></i>
+
+          <div><strong> Package Reference Master Report</strong> </div>
+        </div>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </section>
 <section>
-  <h5>SMARTCARD HISTORY</h5>
-  <div class="cardContainer">
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>Activation History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>Deactivation History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Smartcard Upload Report</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Alacarte Log</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Box Update Report</strong> </div>
-    </div>
-  </div>
+  <mat-accordion class="example-headers-align">
+    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title class="text2">SMARTCARD HISTORY</mat-panel-title>
+      </mat-expansion-panel-header>
+      <!-- <h5>SMARTCARD HISTORY</h5> -->
+      <div class="cardContainer">
+        <div class="card"><i class="fas fa-rocket"></i>
+          <div><strong>Activation History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-ban"></i>
+          <div><strong>Deactivation History</strong> </div>
+        </div>
+        <div class="card"> <i class="fas fa-cloud-upload-alt"></i>
+          <div><strong>Smartcard Upload Report</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-th-list"></i> 
+          <div><strong>Alacarte Log</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-file-alt"></i>
+          <div><strong>Box Update Report</strong> </div>
+        </div>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </section>
 <section>
-  <h5>CAS OPERATION HISTORY</h5>
-  <div class="cardContainer">
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>First Time Activation History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-city"></i>
-      <div><strong>Channel Update History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Invertory Upload Report</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Smartcard Update History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Force Tuning History</strong> </div>
-    </div>
-    <div class="card"><i class="fa-solid fa-user"></i>
-      <div><strong>Not Allocated Smartcard</strong> </div>
-    </div>
-  </div>
+  <mat-accordion class="example-headers-align">
+    <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title class="text2">CAS OPERATION HISTORY</mat-panel-title>
+      </mat-expansion-panel-header>
+      <!-- <h5>CAS OPERATION HISTORY</h5> -->
+      <div class="cardContainer">
+        <div class="card"><i class="fas fa-check-circle"></i>
+          <div><strong>First Time Activation History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-tv"></i>
+          <div><strong>Channel Update History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-file-upload"></i> 
+          <div><strong>Invertory Upload Report</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-store"></i>
+          <div><strong>Smartcard Update History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-boxes"></i>
+          <div><strong>Force Tuning History</strong> </div>
+        </div>
+        <div class="card"><i class="fas fa-exclamation-circle"></i> 
+          <div><strong>Not Allocated Smartcard</strong> </div>
+        </div>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </section>
