--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.scss
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.scss
@@ -1,326 +1,146 @@
 
-.wrapper {
+
+
+// ==============================================================================================================================
+section {
+    border: 1px solid lightgray;
+    margin-bottom: 15px;
+  }
+  
+  .display {
     display: flex;
-    // margin: 50px auto 50px;
-    // max-width: 1700px;
-}
-
-
-.display {
-    display: flex;
-    // flex-wrap: wrap;
-    // margin: 5px -35px;
-    justify-content: center;
-}
-
-.card_container {
-    display: flex;
-    background-color: rgb(48, 46, 46);
-    min-width: 25px;
-    justify-content: center;
-    align-items: center;
-    min-height: 100px;
-    border-radius: 15px;
-    // padding: .9em 15px .3em 25px ;
-    justify-content: space-between;
-    transition: .4s;
-    position: relative;
-    box-shadow: rgba(85, 80, 110, 0.11) 0 0 0px 2px;
-
-    .info_container {
-        display: flex;
-        flex-direction: column;
-
-        p {
-            margin: 8px;
-        }
-
-        .domain_status {
-            padding: 5px 15px;
-            color: white;
-            border-radius: 15px;
-            font-size: 14px;
-            width: fit-content;
-            margin-bottom: 9px;
-        }
-
-        .description {
-            color: white;
-            font-size: 15px;
-            font-weight: 400;
-        }
-
-        .title {
-            transform: translateY(0px);
-            font-size: 15px;
-            color: white;
-        }
-
-        /*       outline:solid yellow ; */
-
-    }
-
-    .actions_cnt {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-end;
-        position: relative;
-
-        /*       outline:solid yellow ; */
-        .actions {
-            display: none;
-            position: absolute;
-            flex-direction: column;
-            gap: 5px;
-            background-color: white;
-            padding: 9px;
-            border-radius: 7px;
-            box-shadow: 0 0 8px 2px rgba(17, 12, 46, 0.11);
-            top: 25px;
-            font-weight: medium;
-            // left: 18px;
-
-            span {
-                cursor: pointer;
-
-                &:hover {
-                    scale: 1.019;
-                    transition: .3s;
-                }
-            }
-        }
-
-        .menu {
-            transform: translateX(10px);
-            transition: .4s;
-
-            &:hover {
-                cursor: pointer;
-                scale: 1.088;
-            }
-        }
-
-        .actions:hover {
-            display: flex;
-        }
-
-        .menu:hover+.actions {
-            display: flex;
-            transition: .5s;
-        }
-
-        .date {
-            font-weight: 500;
-            transform: translateY(10px)
-        }
-    }
-
-    &:hover {
-        transform: scale(0.98);
-
-        .info_container {
-            transform: translateX(2.5em);
-        }
-
-        .left_overlay {
-            width: calc(100% - 500px);
-            transition: .5s;
-
-            svg {
-                display: block;
-            }
-        }
-
-    }
-
-    .left_overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 10px;
-        height: 100%;
-        border-radius: 15px 0 0 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        svg {
-            display: none;
-        }
-    }
-
-    .view_task_overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 70%;
-        height: 100%;
-        cursor: pointer;
-    }
-}
-
-.all_info {
-    position: absolute;
-    display: none;
-    background-color: white;
-    box-shadow: rgba(85, 80, 110, 0.11) 0 0 0px 2px;
-    padding: .7em;
-    border-radius: 10px;
-    height: auto;
-    overflow-y: auto;
-    overflow-x: hidden;
-    min-width: 85%;
-    left: calc(100% - 305px);
-    bottom: 0;
-    z-index: 1;
-    font-size: 15px;
-
-    .title_all {
-        margin: auto;
-        text-align: center;
-    }
-
-    p {
-        margin: 9px
-    }
-
-    .info_value {
-        font-weight: 600;
-    }
-
-    &:hover {
-        display: block;
-    }
-}
-
-.left_overlay {
-    z-index: 9;
-    cursor: pointer;
-
-    &:hover+.all_info {
-        display: block;
-        /*             z-index: 2000; */
-    }
-}
-
-.ENCOURS {
-    background-color: hsl(42, 96%, 47%);
-}
-
-.CLOTURER {
-    background-color: hsl(150, 90%, 35%);
-}
-
-.ANNULE {
-    background-color: hsl(357, 85%, 45%);
-}
-
-// ------- Task Status 
-.ENCOURS_text {
-    color: hsl(42, 96%, 47%);
-}
-
-.CLOTURER_text {
-    color: hsl(150, 90%, 35%);
-}
-
-.ANNULE_text {
-    color: hsl(357, 85%, 45%);
-}
-
-.date_fill_annule * {
-    fill: hsl(357, 85%, 45%);
-}
-
-.date_fill_cloturer * {
-    fill: hsl(150, 90%, 35%);
-}
-
-.text2 {
+  }
+  
+  .text2 {
     padding: 0.5rem;
     font-size: 17px;
-    color: #202c2c;
+    // color: #202c2c;
+    text-transform: uppercase;
+    color: #300a26;
     font-weight: 700;
-  }
-@media screen and (max-width:560px) {
-    .display {
-        display: block;
-    }
-}
-@media screen and (max-width:1200px) {
-    .display {
-        display: block;
-    }
-}
-
-@keyframes move_icone {
-    0% {
-        rotate: -5deg;
-    }
-
-    50% {
-        rotate: 5deg;
-    }
-
-    100% {
-        rotate: 0deg;
-    }
-}
-// =========================================================================================================================
-#main {
-    margin: 50px 0;
+    display: flex;
+    justify-content: left;
+    align-items: center;
   }
   
-  #main #faq .card {
-    margin-bottom: 30px;
-    border: 0;
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #31a6f4;
   }
   
-  #main #faq .card .card-header {
-    border: 0;
-    -webkit-box-shadow: 0 0 20px 0 rgba(213, 213, 213, 0.5);
-            box-shadow: 0 0 20px 0 rgba(213, 213, 213, 0.5);
-    border-radius: 2px;
-    padding: 0;
+  .cardContainer {
+    flex-basis: 95%;
+    padding: 10px 20px;
+    // font-family: "Ubuntu", sans-serif;
+    text-transform: capitalize;
+    display: flex;
+    flex-wrap: wrap;
+    background: #cfd1d2;
+    // justify-content: space-between;
+    gap: 4%;
   }
   
-  #main #faq .card .card-header .btn-header-link {
-    color: #fff;
-    display: block;
-    text-align: left;
-    background: #FFE472;
-    color: #222;
+  .card {
     padding: 20px;
+    border-radius: 15px;
+    background-color: white;
+    // width: 22%;
+    flex: 1 1 calc(23.33% - 20px);
+    max-width: calc(30.33% - 20px);
+    color: grey;
+    margin: 15px 0;
+    box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
+    // display: flex;
+    display: -webkit-inline-box;
+    // justify-content: space-between;
+    gap: 5%;
+    // box-sizing: border-box;
+
   }
   
-  #main #faq .card .card-header .btn-header-link:after {
-    content: "\f107";
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    float: right;
+  .card div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-basis: 70%;
+    text-align: left;
   }
   
-  #main #faq .card .card-header .btn-header-link.collapsed {
-    background: #A541BB;
-    color: #fff;
+  .card i {
+    background: #b3f0ff;
+    color: #00a3cc;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 35px;
+    padding: 15px;
+    font-size: 20px;
   }
   
-  #main #faq .card .card-header .btn-header-link.collapsed:after {
-    content: "\f106";
+  // .card * {
+  //   text-wrap: nowrap;
+  // }
+  .card strong {
+    color: black;
+    font-weight: 500;
+    font-size: 15px;
   }
   
-  #main #faq .card .collapsing {
-    background: #FFE472;
-    line-height: 30px;
+  h5 {
+    padding: 0.5rem;
+    background-color: #e5f0f0;
+    border: 2px solid lightgray;
   }
   
-  #main #faq .card .collapse {
-    border: 0;
+  @media (max-width: 1200px) {
+    .cardContainer {
+      justify-content: space-between;
+      gap: unset;
+    }
+  
+    .card {
+        flex: 1 1 calc(60% - 20px); /* Two cards per row */
+        max-width: calc(49% - 20px);
+    }
+  
+    .display {
+      display: block;
+    }
+  }
+  @media (max-width: 850px) {
+    .cardContainer {
+      justify-content: space-between;
+      gap: unset;
+    }
+  
+    .card {
+        flex: 1 1 calc(60% - 20px); /* Two cards per row */
+        max-width: calc(49% - 20px);
+    }
+  
+    .display {
+      display: block;
+    }
   }
   
-  #main #faq .card .collapse.show {
-    background: #FFE472;
-    line-height: 30px;
-    color: #222;
+  @media (max-width: 650px) {
+    .cardContainer {
+      justify-content: center;
+    }
+  
+    .card {
+        flex: 1 1 100%; /* One card per row */
+        max-width: 100%;
+    }
+  
+    .display {
+      display: block;
+    }
   }
+  
