--- a/src/app/admin/features/operator/operator-details/operator-details.component.html
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.html
@@ -134,7 +134,7 @@
                             </div>
 
 
-                            <!-- <div class="files tooltip-container mx-2" (click)="openDialog('recharge',operator.operatorid)">
+                            <div class="files tooltip-container mx-2" (click)="openDialog('recharge',operator.operatorid)">
                                 <div class="files tooltip-container ">
                                     <i class="fa-solid fa-book" style="font-size:20px;color:var(--primary-color)"></i>
                                     <span class="tooltip">LCO RECHARGE REPORT
@@ -173,7 +173,7 @@
                                     <span class="tooltip">PRODUCTWISE CURRENT COUNT
                                     </span>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="child-card col-12">
