--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -6,7 +6,7 @@
 <div class="d-flex justify-content-center align-item-center" style="margin-top: 50px;">
     <div class="col-12 col-md-6">
         <div class="card">
-            <div class="input_box display_1  mb-2">
+            <div class=" display_1  mb-2">
                 <div class="col-12 col-md-4">
                     <span for="">Date</span>
                 </div>
@@ -22,11 +22,11 @@
                 </div>
             </div>
 
-            <div class="input_box display_1  mb-3">
+            <div class=" display_1  mb-3">
                 <div class="col-12 col-md-4">
                     <span for="">Operator</span>
                 </div>
-                <div class=" custom-select input_box operator_width  mb-2 mx-2">
+                <div class=" custom-select  operator_width  mb-2 mx-2">
                     <input type="text" placeholder="Search Operator" [(ngModel)]="operatorname"
                         (input)="filterOperators()" (focus)="showDropdown = false" (click)="showDropdown = true">
 
@@ -48,7 +48,7 @@
                     </mat-autocomplete> -->
                 </div>
             </div>
-            <div class=" input_box  display_1 justify-content-between align-item-center">
+            <div class="   display_1 justify-content-between align-item-center">
                 <div class="col-12 col-md-4">
                     <span for="">Format</span>
                 </div>
